2009-12-06  Ulf Jasper  <ulf.jasper@web.de>

	* xml.el (xml-substitute-numeric-entities): Moved
	newsticker--decode-numeric-entities in newst-backend.el to
	xml-substitute-numeric-entities in xml.el. (Bug#5008)

	* net/newst-backend.el (newsticker--parse-generic-feed)
	(newsticker--parse-generic-items)
	(newsticker--decode-numeric-entities): Moved
	newsticker--decode-numeric-entities in newst-backend.el to
	xml-substitute-numeric-entities in xml.el. (Bug#5008)

2009-12-06  Daniel Colascione  <dan.colascione@gmail.com>

	* progmodes/js.el (js--js-not): Add null to the list of values.

2009-12-06  Chong Yidong  <cyd@stupidchicken.com>

	* ansi-color.el (ansi-color-for-comint-mode): Add :version
	keyword.

2009-12-06  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-enclosing-field): Exclude entry
	delimiter if it is at the end of the current line.
	(bibtex-generate-url-list): Fix docstring.

2009-12-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-complete-and-exit): Don't replace the
	minibuffer's content with itself.
	Fold the confirm-after-completion case into the `confirm' case.
	(completion-pcm-word-delimiters): Add : and / to the delimiters.

2009-12-06  Kevin Ryde  <user42@zip.com.au>

	* ffap.el (ffap-rfc-path): Make this a defcustom since
	`ffap-rfc-directories' is also a defcustom.  (My Bug#4514.)

	* info-look.el: Add setup for apropos-mode to use emacs-lisp-mode
	manuals, similar to existing setup for help-mode.  (My bug#3913.)

2009-12-05  Juri Linkov  <juri@jurta.org>

	Save and restore dired buffer's point positions too.  (Bug#4880)

	* dired.el (dired-save-positions): Return in the first element
	buffer's position in format (BUFFER DIRED-FILENAME BUFFER-POINT).
	Doc fix.
	(dired-restore-positions): First restore buffer's position.
	While restoring window's positions, check if window still displays
	the original buffer.

2009-12-05  Chong Yidong  <cyd@stupidchicken.com>
